# CS348-temp

./: README.md
.devcontainer/: devcontainer.json
backend/: build-server.sh  pyproject.toml  requirements.txt
backend/src/: main.py
database/: README.md  sample_data.sql  schema.sql  setup_database.py
frontend/: package-lock.json  package.json
